--- a/3_3.ipynb
+++ b/3_3.ipynb
@@ -2,16 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 데이터 준비\n",
     "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,10 +105,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 훈련 세트와 테스트 세트 나누기\n",
     "from sklearn.model_selection import train_test_split\n",
     "train_input, test_input, train_target, test_target = train_test_split(\n",
     "    perch_full, perch_weight, random_state=42)"
@@ -115,16 +117,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 사이킷런 transform\n",
     "from sklearn.preprocessing import PolynomialFeatures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +157,7 @@
        "       'x2^2'], dtype=object)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -165,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,18 +177,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.9903183436982125\n"
+      "0.999999999999769\n"
      ]
     }
    ],
    "source": [
+    "# 다중 회귀 모델 훈련\n",
     "from sklearn.linear_model import LinearRegression\n",
     "lr = LinearRegression()\n",
     "lr.fit(train_poly, train_target)\n",
@@ -194,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -223,7 +227,7 @@
     }
    ],
    "source": [
-    "poly = PolynomialFeatures(degree=5, include_bias=False)\n",
+    "poly = PolynomialFeatures(degree=5, include_bias=False) # 5제곱까지의 특성을 만들어줌\n",
     "poly.fit(train_input)\n",
     "train_poly = poly.transform(train_input)\n",
     "test_poly = poly.transform(test_input)\n",
@@ -232,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -250,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -262,15 +266,18 @@
     }
    ],
    "source": [
-    "print(lr.score(test_poly, test_target))"
+    "# 특성의 개수를 크게 늘리면 선형 모델은 아주 강력해짐. 훈련 세트에 대해 거의 완변하게 학습할 수 있음\n",
+    "# 하지만 훈련 세트에 너무 과대적합되어있음\n",
+    "print(lr.score(test_poly, test_target)) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 규제\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "ss = StandardScaler()\n",
     "ss.fit(train_poly)\n",
@@ -280,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -292,6 +299,7 @@
     }
    ],
    "source": [
+    "# 릿지 회귀 \n",
     "from sklearn.linear_model import Ridge\n",
     "ridge = Ridge()\n",
     "ridge.fit(train_scaled, train_target)\n",
@@ -300,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,13 +345,14 @@
     "    ridge = Ridge(alpha=alpha)\n",
     "    ridge.fit(train_scaled, train_target)\n",
     "    \n",
-    "    train_score.append(ridge.score(train_scaled, train_target))\n",
+    "    # 훈련 점수와 테스트 점수를 저장함\n",
+    "    train_score.append(ridge.score(train_scaled, train_target)) \n",
     "    test_score.append(ridge.score(test_scaled, test_target))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -367,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -388,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -400,6 +409,7 @@
     }
    ],
    "source": [
+    "# 라쏘 회귀\n",
     "from sklearn.linear_model import Lasso\n",
     "lasso = Lasso()\n",
     "lasso.fit(train_scaled, train_target)\n",
@@ -408,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
