--- a/7_2.ipynb
+++ b/7_2.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 2개의 층\n",
     "from tensorflow import keras\n",
     "(train_input, train_target), (test_input, test_target) = \\\n",
     "keras.datasets.fashion_mnist.load_data()"
@@ -13,21 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "train_scaled = train_input / 255.0\n",
-    "train_scaled = train_scaled.reshape(-1, 28*28)\n",
-    "train_scaled, val_scaled, train_target, val_target = train_test_split(\n",
+    "train_scaled = train_input / 255.0 # 이미지의 픽셀값을 0~255 범위에서 0~1사이로 변환\n",
+    "train_scaled = train_scaled.reshape(-1, 28*28) # 28x28 크기의 2차원 배열을 784크기의 1차원배열로 펼침\n",
+    "train_scaled, val_scaled, train_target, val_target = train_test_split( # 훈련 세트와 검증 세트로 나누기\n",
     "    train_scaled, train_target, test_size=0.2, random_state=42\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
@@ -76,21 +77,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 층을 추가하는 다른 방법\n",
     "model = keras.Sequential([\n",
-    "    keras.layers.Dense(100, activation='sigmoid', input_shape=(784,),\n",
+    "    keras.layers.Dense(100, activation='sigmoid', input_shape=(784,), # 은닉층\n",
     "                        name='hidden'),\n",
-    "    keras.layers.Dense(10, activation='softmax', name='output')\n",
+    "    keras.layers.Dense(10, activation='softmax', name='output') # 출력층\n",
     "    ], name='패션 MNIST 모델')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,14 +131,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_2\"\n",
+      "Model: \"sequential_1\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
@@ -159,45 +160,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/5\n"
+      "Epoch 1/5\n",
+      "   1/1500 [..............................] - ETA: 3:20 - loss: 2.4821 - accuracy: 0.1250"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-09-23 13:36:51.193559: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2024-09-30 02:50:25.063493: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1500/1500 [==============================] - 1s 691us/step - loss: 0.5638 - accuracy: 0.8094\n",
+      "1500/1500 [==============================] - 1s 406us/step - loss: 0.5614 - accuracy: 0.8072\n",
       "Epoch 2/5\n",
-      "1500/1500 [==============================] - 1s 647us/step - loss: 0.4070 - accuracy: 0.8539\n",
+      "1500/1500 [==============================] - 1s 417us/step - loss: 0.4094 - accuracy: 0.8521\n",
       "Epoch 3/5\n",
-      "1500/1500 [==============================] - 1s 675us/step - loss: 0.3729 - accuracy: 0.8659\n",
+      "1500/1500 [==============================] - 1s 430us/step - loss: 0.3746 - accuracy: 0.8641\n",
       "Epoch 4/5\n",
-      "1500/1500 [==============================] - 1s 647us/step - loss: 0.3497 - accuracy: 0.8729\n",
+      "1500/1500 [==============================] - 1s 429us/step - loss: 0.3516 - accuracy: 0.8714\n",
       "Epoch 5/5\n",
-      "1500/1500 [==============================] - 1s 652us/step - loss: 0.3341 - accuracy: 0.8787\n"
+      "1500/1500 [==============================] - 1s 422us/step - loss: 0.3337 - accuracy: 0.8784\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x16a0df190>"
+       "<keras.callbacks.History at 0x17f907ac0>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,14 +232,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_3\"\n",
+      "Model: \"sequential_2\"\n",
       "_________________________________________________________________\n",
       " Layer (type)                Output Shape              Param #   \n",
       "=================================================================\n",
@@ -261,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -281,24 +283,24 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "1500/1500 [==============================] - 1s 663us/step - loss: 0.5328 - accuracy: 0.8117\n",
+      "1500/1500 [==============================] - 1s 426us/step - loss: 0.5303 - accuracy: 0.8147\n",
       "Epoch 2/5\n",
-      "1500/1500 [==============================] - 1s 656us/step - loss: 0.3917 - accuracy: 0.8594\n",
+      "1500/1500 [==============================] - 1s 438us/step - loss: 0.3912 - accuracy: 0.8595\n",
       "Epoch 3/5\n",
-      "1500/1500 [==============================] - 1s 659us/step - loss: 0.3540 - accuracy: 0.8732\n",
+      "1500/1500 [==============================] - 1s 427us/step - loss: 0.3562 - accuracy: 0.8707\n",
       "Epoch 4/5\n",
-      "1500/1500 [==============================] - 1s 653us/step - loss: 0.3303 - accuracy: 0.8808\n",
+      "1500/1500 [==============================] - 1s 439us/step - loss: 0.3356 - accuracy: 0.8809\n",
       "Epoch 5/5\n",
-      "1500/1500 [==============================] - 1s 655us/step - loss: 0.3174 - accuracy: 0.8872\n"
+      "1500/1500 [==============================] - 1s 413us/step - loss: 0.3217 - accuracy: 0.8856\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x17a6b1e10>"
+       "<keras.callbacks.History at 0x30cd8e8c0>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,23 +312,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "375/375 [==============================] - 0s 435us/step - loss: 0.3797 - accuracy: 0.8717\n"
+      "375/375 [==============================] - 0s 264us/step - loss: 0.3643 - accuracy: 0.8772\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[0.3796955645084381, 0.871666669845581]"
+       "[0.3643330931663513, 0.8771666884422302]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,6 +348,87 @@
     "model.add(keras.layers.Flatten(input_shape=(28, 28)))\n",
     "model.add(keras.layers.Dense(100, activation='relu'))\n",
     "model.add(keras.layers.Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = keras.Sequential()\n",
+    "model.add(keras.layers.Flatten(input_shape=(28,28)))\n",
+    "model.add(keras.layers.Dense(100, activation='relu'))\n",
+    "model.add(keras.layers.Dense(10, activation='softmax'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "1500/1500 [==============================] - 1s 357us/step - loss: 0.5278 - accuracy: 0.8147\n",
+      "Epoch 2/5\n",
+      "1500/1500 [==============================] - 1s 357us/step - loss: 0.3942 - accuracy: 0.8576\n",
+      "Epoch 3/5\n",
+      "1500/1500 [==============================] - 1s 358us/step - loss: 0.3547 - accuracy: 0.8697\n",
+      "Epoch 4/5\n",
+      "1500/1500 [==============================] - 1s 377us/step - loss: 0.3295 - accuracy: 0.8802\n",
+      "Epoch 5/5\n",
+      "1500/1500 [==============================] - 1s 356us/step - loss: 0.3092 - accuracy: 0.8865\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<keras.callbacks.History at 0x17c808a30>"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics='accuracy')\n",
+    "model.fit(train_scaled, train_target, epochs=5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "375/375 [==============================] - 0s 262us/step - loss: 0.3302 - accuracy: 0.8834\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[0.33015191555023193, 0.8834166526794434]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model.evaluate(val_scaled, val_target)"
    ]
   },
   {
